2009-01-04 Dietmar Warning
 * src/math/misc/isinf.c, Makefile.am: a simple (but ugly) workaround for isinf 
   needed by some adms generated models
 * adms/ekv/amsva/ekv.va: compatibility regarding S/D diode behaviour

2009-01-02 Dietmar Warning
 * adms/ekv/amsva/ekv.va: EPFL-EKV version 2.63, replacement of the long channel 
   version with a code according to the official manual (revision II) available 
   at http://legwww.epfl.ch/ekv, contribution of Ivan Riis Nielsen 11/2006.
 * /src/frontend/wdisp/windisp.c, 398: windows zoom was broken - %le for double 
   seems not more ignored, changed to more suitable %e

2009-01-01 Dietmar Warning
 * configure.in, include/missing_math.h, src/math/misc/isnan.c: POSIX conform 
   configure isnan, isinf macros and finite function
 * admst/ngspiceMODULEdefs.h.xml: some cc needs double cast for isinf macro

2008-12-31 Holger Vogt
  * resource.c: streamline resource info under Windows
  * tclspice integration under Windows: dctran.c, inpfindl.c, outitf.c, alloc.c,
    tclspice.c, winmain.c: type definitions, printf -> fprintf,
    new heap for plot data to prevent memory fragmentation
  * configure.in: new flags for TCL under Windows: HAS_TCLWIN 
    (is set instead of HAS_WINDOWS), TCLWIN (for generating makefiles, 
    instead of WINDOWS)
  * cmath/makefile.am: prevent making test executables under TCL/Windows
    
2008-12-26 Dietmar Warning
 * autogen.sh, configure.in: A hopeful way to integrate adms - ugly, but tested
   under linux, sunOS and msys with and w/o adms enabled.
 * src/spicelib/devices/adms/hicum0: updated verilog code with small adaption
   to actual hicum0 version 1.2
 * tests/adms/hicum0: using one library file for tests

2008-12-23 Holger Vogt
  * resource.c: for tclspice HAS_WINDOWS replaced by _MSC_VER and __MINGW32__
  * outitf.c, cktdojob.c: printf replaced by fprintf
  * cpitf.c:216 s replaced by copys
  * tclspice.c:2168 init_rlimits( ) added to get startup system info
  
2008-12-22 Holger Vogt