@@ -1,26 +1,35 @@
 #include "ngspice.h"
 
-/* this is really ugly - but it is a emergency case */
-
 #ifndef HAVE_DECL_ISINF
+
 #ifndef HAVE_ISINF
 
-static int
-isinf(double x)
-{
-    volatile double a = x;
+#ifdef HAVE_IEEEFP_H
 
-    if (a > DBL_MAX)
-        return 1;
-    if (a < -DBL_MAX)
-        return -1;
-    return 0;
-}
+  int isinf(double x) { return !finite(x) && x==x; }
 
-/*
- * end isinf.c
- */
+#else /* HAVE_IEEEFP_H */
+
+  /* this is really ugly - but it is a emergency case */
+  
+  static int
+  isinf(double x)
+  {
+      volatile double a = x;
+  
+      if (a > DBL_MAX)
+          return 1;
+      if (a < -DBL_MAX)
+          return -1;
+      return 0;
+  }
+
+#endif /* HAVE_IEEEFP_H */
+
 #else /* HAVE_ISINF */
-int Dummy_Symbol_5;
+
+  int Dummy_Symbol_5;
+
 #endif /* HAVE_ISINF */
+
 #endif /* HAVE_DECL_ISINF */
